Building up the structure

--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,13 @@
 	</build>
 
 	<modules>
+		<module>SpiNNaker-utils</module>
+		<module>SpiNNaker-machine</module>
+		<module>SpiNNaker-storage</module>
+		<module>SpiNNaker-transceiver</module>
+		<module>SpiNNaker-pacman</module>
+		<module>SpiNNaker-spalloc-client</module>
+		<module>SpiNNaker-data-specification</module>
+		<module>SpiNNaker-front-end</module>
 	</modules>
 </project>
