More corrections to get everything into a good state to begin

--- a/SpiNNaker-transceiver/pom.xml
+++ b/SpiNNaker-transceiver/pom.xml
@@ -4,6 +4,7 @@
 	<parent>
 		<groupId>uk.ac.manchester.spinnaker</groupId>
 		<artifactId>SpiNNaker</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SpiNNaker-transceiver</artifactId>
 </project>
