--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ before_install:
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dmaven.compiler.showDeprecation=true
 script:
-  - mvn test -B -Dmaven.javadoc.skip=true
+  - mvn test -B -Dmaven.javadoc.skip=true jacoco:report
   - mvn checkstyle:check -Dmaven.javadoc.skip=true
   - mvn javadoc:javadoc
+after_success:
+  - mvn coveralls:report
+  
