--- a/SpiNNaker-machine/pom.xml
+++ b/SpiNNaker-machine/pom.xml
@@ -13,4 +13,6 @@
 				<artifactId>junit</artifactId>
 			</dependency>
 		</dependencies>
+		<description>Describes a SpiNNaker machine.</description>
+		<name>SpiNNaker Machine Description</name>
 </project>
