--- a/pom.xml
+++ b/pom.xml
@@ -102,4 +102,24 @@
 		<module>SpiNNaker-data-specification</module>
 		<module>SpiNNaker-front-end</module>
 	</modules>
+	<name>SpiNNaker Java Host</name>
+	<description>Implementation of the host software for SpiNNaker in Java.</description>
+	<inceptionYear>2018</inceptionYear>
+	<url>http://spinnakermanchester.github.io/</url>
+	<organization>
+		<name>SpiNNaker Team @ University of Manchester</name>
+		<url>http://apt.cs.manchester.ac.uk/projects/SpiNNaker/</url>
+	</organization>
+	<scm>
+		<connection>https://github.com/SpiNNakerManchester/JavaSpiNNaker.git</connection>
+		<url>https://github.com/SpiNNakerManchester/JavaSpiNNaker</url>
+	</scm>
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/SpiNNakerManchester/JavaSpiNNaker/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis</system>
+		<url>https://travis-ci.org/SpiNNakerManchester/JavaSpiNNaker</url>
+	</ciManagement>
 </project>
