--- a/SpiNNaker-data-specification/pom.xml
+++ b/SpiNNaker-data-specification/pom.xml
@@ -7,4 +7,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SpiNNaker-data-specification</artifactId>
+	<description>Data specification generator and executor</description>
+	<name>SpiNNaker Data Specification</name>
 </project>
