--- a/SpiNNaker-pacman/pom.xml
+++ b/SpiNNaker-pacman/pom.xml
@@ -7,4 +7,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SpiNNaker-pacman</artifactId>
+	<description>Implementation of the Partitioning and Configuration Manager (PACMAN).</description>
+	<name>SpiNNaker PACMAN</name>
 </project>
