--- a/SpiNNaker-transceiver/pom.xml
+++ b/SpiNNaker-transceiver/pom.xml
@@ -7,4 +7,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SpiNNaker-transceiver</artifactId>
+	<description>How to actually talk to a SpiNNaker machine.</description>
+	<name>SpiNNaker Transceiver</name>
 </project>
