--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 		<module>SpiNNaker-utils</module>
 		<module>SpiNNaker-machine</module>
 		<module>SpiNNaker-storage</module>
-		<module>SpiNNaker-transceiver</module>
+		<module>SpiNNaker-comms</module>
 		<module>SpiNNaker-pacman</module>
 		<module>SpiNNaker-spalloc-client</module>
 		<module>SpiNNaker-data-specification</module>
