--- a/SpiNNaker-machine/pom.xml
+++ b/SpiNNaker-machine/pom.xml
@@ -13,6 +13,10 @@
                         <artifactId>junit-jupiter-api</artifactId>
                 </dependency>
                 <dependency>
+                        <groupId>org.hamcrest</groupId>
+                        <artifactId>java-hamcrest</artifactId>
+                        </dependency>
+                <dependency>
                         <groupId>uk.ac.manchester.spinnaker</groupId>
                         <artifactId>SpiNNaker-utils</artifactId>
                 </dependency>
