Connection listener thread

--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,16 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spinnaker.version>0.0.1-SNAPSHOT</spinnaker.version>
+		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
-                                <artifactId>junit-jupiter-api</artifactId>
-                                <version>5.1.0</version>
-                                <scope>test</scope>
+				<artifactId>junit-jupiter-api</artifactId>
+				<version>5.1.0</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
@@ -31,6 +32,17 @@
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-machine</artifactId>
 				<version>${spinnaker.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>runtime</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
