Get the tests passing. Or skipping gracefully…

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spinnaker.version>0.0.1-SNAPSHOT</spinnaker.version>
 		<slf4j.version>1.7.25</slf4j.version>
+		<junit.version>5.2.0</junit.version>
 	</properties>
 
 	<dependencyManagement>
@@ -20,7 +21,13 @@
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-api</artifactId>
-				<version>5.1.0</version>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
