--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,17 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<repositories>
+		<repository>
+		<!-- We are *NOT* interested in snapshot repos! -->
+			<id>apache.snapshots</id>
+			<url>https://repository.apache.org/snapshots/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<build>
 		<pluginManagement>
 			<plugins>
