--- a/SpiNNaker-comms/pom.xml
+++ b/SpiNNaker-comms/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SpiNNaker-comms</artifactId>
-	<description>How to actually talk to a SpiNNaker machine.</description>
+	<description>How to actually talk to a SpiNNaker machine and to Spalloc, the allocation service.</description>
 	<name>SpiNNaker Communications</name>
 	<dependencies>
 		<dependency>
@@ -38,12 +38,10 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
-			<version>2.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-configuration2</artifactId>
-			<version>2.3</version>
 		</dependency>
 	</dependencies>
 	<build>
