--- a/pom.xml
+++ b/pom.xml
@@ -67,27 +67,18 @@
 				<version>${slf4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.module</groupId>
+				<artifactId>jackson-module-jaxb-annotations</artifactId>
+				<version>2.9.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-configuration2</artifactId>
+				<version>2.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<repositories>
-		<repository>
-		<!-- We are *NOT* interested in snapshot repos! -->
-			<id>apache.snapshots</id>
-			<url>https://repository.apache.org/snapshots/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-		<!-- We are *NOT* interested in snapshot repos! -->
-			<id>apache-snapshots</id>
-			<url>https://repository.apache.org/snapshots/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 	<build>
 		<pluginManagement>
@@ -195,7 +186,7 @@
 		<module>SpiNNaker-storage</module>
 		<module>SpiNNaker-comms</module>
 		<module>SpiNNaker-pacman</module>
-		
+
 		<module>SpiNNaker-data-specification</module>
 		<module>SpiNNaker-front-end</module>
 	</modules>
