--- a/SpiNNaker-comms/src/test/resources/log4j.properties
+++ b/SpiNNaker-comms/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
 log4j.rootLogger=INFO, stderr
+log4j.logger.org.apache.commons.beanutils=ERROR
 
 # Direct log messages to stderr
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
