--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,16 @@
 				<version>${spinnaker.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>uk.ac.manchester.spinnaker</groupId>
+				<artifactId>SpiNNaker-storage</artifactId>
+				<version>${spinnaker.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>uk.ac.manchester.spinnaker</groupId>
+				<artifactId>SpiNNaker-comms</artifactId>
+				<version>${spinnaker.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
