--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,16 @@
 				<version>${slf4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.6</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.8</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
