--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_install:
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dmaven.compiler.showDeprecation=true
 script:
-  - mvn test -B -Dmaven.javadoc.skip=true jacoco:report
-  - mvn checkstyle:check -Dmaven.javadoc.skip=true
-  - mvn javadoc:javadoc
+  - mvn test --settings .travis/travis-settings.xml -B -Dmaven.javadoc.skip=true jacoco:report
+  - mvn checkstyle:check --settings .travis/travis-settings.xml -Dmaven.javadoc.skip=true
+  - mvn javadoc:javadoc --settings .travis/travis-settings.xml
 after_success:
-  - mvn coveralls:report
+  - mvn coveralls:report --settings .travis/travis-settings.xml
   
