Starting to write the code for higher level ops with the DSE

--- a/SpiNNaker-data-specification/pom.xml
+++ b/SpiNNaker-data-specification/pom.xml
@@ -29,6 +29,10 @@
 		</dependency>
 		<dependency>
 			<groupId>uk.ac.manchester.spinnaker</groupId>
+			<artifactId>SpiNNaker-comms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.manchester.spinnaker</groupId>
 			<artifactId>SpiNNaker-storage</artifactId>
 		</dependency>
 		<dependency>
