--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ cache:
   directories:
     - $HOME/.m2
 before_install:
-  # Work around ludicrous Travis bug
+  # Work around ludicrous Travis bugs
   - git clone https://github.com/SpiNNakerManchester/SupportScripts.git support
   - python support/travis_blocking_stdout.py
+  - unset _JAVA_OPTIONS
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dmaven.compiler.showDeprecation=true
 script:
