Config to (possibly) allow system tests to talk to spalloc-ed boards

--- a/SpiNNaker-comms/src/test/resources/testconfig/test.cfg
+++ b/SpiNNaker-comms/src/test/resources/testconfig/test.cfg
@@ -7,3 +7,9 @@ version = 5
 #version = 2
 #bmp_names = None
 auto_detect_bmp = False
+
+[Spalloc]
+hostname = spinnaker.cs.man.ac.uk
+#port = 22244
+#timeout = 500
+tag = IT408
