--- a/SpiNNaker-comms/src/test/resources/testconfig/test.cfg
+++ b/SpiNNaker-comms/src/test/resources/testconfig/test.cfg
@@ -1,11 +1,11 @@
 [Machine]
-machineName = spinn-2.cs.man.ac.uk
-bmp_names = spinn-2c.cs.man.ac.uk
-version = 5
+#machineName = spinn-2.cs.man.ac.uk
+#bmp_names = spinn-2c.cs.man.ac.uk
+#version = 5
 
-#machineName = 192.168.240.253
-#version = 2
-#bmp_names = None
+machineName = 192.168.240.253
+version = 2
+bmp_names = None
 auto_detect_bmp = False
 
 [Spalloc]
