Attempt to fix javadoc cross-linking issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
   - mvn verify --settings .travis/travis-settings.xml -B -Dmaven.javadoc.skip=true jacoco:report
   - mvn checkstyle:check --settings .travis/travis-settings.xml -Dmaven.javadoc.skip=true
-  - mvn javadoc:javadoc --settings .travis/travis-settings.xml
+  - mvn javadoc:aggregate --settings .travis/travis-settings.xml
 after_success:
   - mvn coveralls:report --settings .travis/travis-settings.xml
 before_cache:
