--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ before_install:
   - python support/travis_blocking_stdout.py
   - unset _JAVA_OPTIONS
 install:
-  - mvn install --settings .travis/travis-settings.xml -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dmaven.compiler.showDeprecation=true
+  - mvn dependency:resolve dependency:resolve-plugins
 script:
+  - mvn apache-rat:check --settings .travis/travis-settings.xml -B -V || (cat target/rat*.txt; exit 1)
+  - mvn install --settings .travis/travis-settings.xml -DskipTests=true -Dmaven.javadoc.skip=true -B
   - mvn verify --settings .travis/travis-settings.xml -B -Dmaven.javadoc.skip=true jacoco:report
   - mvn checkstyle:check --settings .travis/travis-settings.xml -Dmaven.javadoc.skip=true
   - mvn javadoc:aggregate --settings .travis/travis-settings.xml
