--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>sqlite-jdbc</artifactId>
 				<version>3.25.2</version>
 			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.17</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
