--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -20,6 +20,6 @@ log4j.rootLogger=DEBUG, tofile
 log4j.appender.tofile=org.apache.log4j.FileAppender
 log4j.appender.tofile.append=true
 log4j.appender.tofile.file=initial.log
-log4j.appender.tofile.threshold=INFO
+log4j.appender.tofile.threshold=${logging.level}
 log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.tofile.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
