--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>log4j</artifactId>
 				<version>1.2.17</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-text</artifactId>
+				<version>1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>com.googlecode.java-diff-utils</groupId>
+				<artifactId>diffutils</artifactId>
+				<version>1.3.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
