Disable logging of UDP traffic details by default even in debug mode.
Define the system property logging.udp (to be any string) to enable.
Produces a *lot* of noise!

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -15,6 +15,7 @@
 
 # Root logger option
 log4j.rootLogger=DEBUG, tofile
+log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=INFO, tofile
 
 # Direct log messages to file
 log4j.appender.tofile=org.apache.log4j.FileAppender
