Comments and line wrap

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -15,7 +15,10 @@
 
 # Root logger option
 log4j.rootLogger=DEBUG, tofile
-log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=INFO, tofile
+# See https://stackoverflow.com/q/19788839/301832 for how this configuration
+# works. The tail of the property name must match the full class name.
+log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=\
+	INFO, tofile
 
 # Direct log messages to file
 log4j.appender.tofile=org.apache.log4j.FileAppender
@@ -23,4 +26,5 @@ log4j.appender.tofile.append=true
 log4j.appender.tofile.file=initial.log
 log4j.appender.tofile.threshold=${logging.level}
 log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
-log4j.appender.tofile.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.tofile.layout.ConversionPattern=\
+	%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
