Fixes to logging

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -18,6 +18,9 @@ log4j.rootLogger=DEBUG, tofile, con
 log4j.logger.uk.ac.manchester.spinnaker.front_end.download.DataGatherer=\
 	DEBUG, gatherlog, con
 log4j.additivity.uk.ac.manchester.spinnaker.front_end.download.DataGatherer=false
+log4j.logger.uk.ac.manchester.spinnaker.front_end.download.RecordingRegionDataGatherer=\
+	DEBUG, gatherlog, con
+log4j.additivity.uk.ac.manchester.spinnaker.front_end.download.RecordingRegionDataGatherer=false
 # See https://stackoverflow.com/q/19788839/301832 for how this configuration
 # works. The tail of the property name must match the full class name.
 log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=\
@@ -31,16 +34,16 @@ log4j.appender.tofile.file=initial.log
 log4j.appender.tofile.threshold=${logging.level}
 log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.tofile.layout.ConversionPattern=\
-	%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
+	%d{HH:mm:ss} %-5p %C{1}:%L - %m%n
 
-# Special logger that handles thread contexts
+# Special logger that handles gatherer thread contexts
 log4j.appender.gatherlog=org.apache.log4j.FileAppender
 log4j.appender.gatherlog.append=true
-log4j.appender.gatherlog.file=iniial.log
+log4j.appender.gatherlog.file=initial.log
 log4j.appender.gatherlog.threshold=${logging.level}
 log4j.appender.gatherlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.gatherlog.layout.ConversionPattern=\
-    %d{HH:mm:ss.SSS} %p %c{1}:%L %notEmpty{%X} %m%n
+    %d{HH:mm:ss.SSS} %p %C{1}:%L %X{boardRoot} %m%n
 
 # Errors go to stdout in abbreviated form
 log4j.appender.con=org.apache.log4j.ConsoleAppender
