Fix minor misconfiguration

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -47,7 +47,7 @@ log4j.appender.gatherlog.layout.ConversionPattern=\
 
 # Errors go to stdout in abbreviated form
 log4j.appender.con=org.apache.log4j.ConsoleAppender
-log4j.appender.con.target=SYSTEM_ERR
+log4j.appender.con.target=System.err
 log4j.appender.con.threshold=ERROR
 log4j.appender.con.layout=org.apache.log4j.PatternLayout
 log4j.appender.con.layout.ConversionPattern=%p: %m%n
