Fixes for Speed-Up Data In

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -16,11 +16,14 @@
 # Root logger option
 log4j.rootLogger=DEBUG, tofile, con
 log4j.logger.uk.ac.manchester.spinnaker.front_end.download.DataGatherer=\
-	DEBUG, gatherlog, con
+	DEBUG, parallog, con
 log4j.additivity.uk.ac.manchester.spinnaker.front_end.download.DataGatherer=false
 log4j.logger.uk.ac.manchester.spinnaker.front_end.download.RecordingRegionDataGatherer=\
-	DEBUG, gatherlog, con
+	DEBUG, parallog, con
 log4j.additivity.uk.ac.manchester.spinnaker.front_end.download.RecordingRegionDataGatherer=false
+log4j.logger.uk.ac.manchester.spinnaker.front_end.dse.FastExecuteDataSpecification=\
+	DEBUG, parallog, con
+log4j.additivity.uk.ac.manchester.spinnaker.front_end.dse.FastExecuteDataSpecification=false
 # See https://stackoverflow.com/q/19788839/301832 for how this configuration
 # works. The tail of the property name must match the full class name.
 log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=\
@@ -37,12 +40,12 @@ log4j.appender.tofile.layout.ConversionPattern=\
 	%d{HH:mm:ss} %-5p %C{1}:%L - %m%n
 
 # Special logger that handles gatherer thread contexts
-log4j.appender.gatherlog=org.apache.log4j.FileAppender
-log4j.appender.gatherlog.append=true
-log4j.appender.gatherlog.file=initial.log
-log4j.appender.gatherlog.threshold=${logging.level}
-log4j.appender.gatherlog.layout=org.apache.log4j.PatternLayout
-log4j.appender.gatherlog.layout.ConversionPattern=\
+log4j.appender.parallog=org.apache.log4j.FileAppender
+log4j.appender.parallog.append=true
+log4j.appender.parallog.file=initial.log
+log4j.appender.parallog.threshold=${logging.level}
+log4j.appender.parallog.layout=org.apache.log4j.PatternLayout
+log4j.appender.parallog.layout.ConversionPattern=\
     %d{HH:mm:ss.SSS} %p %C{1}:%L %X{boardRoot} %m%n
 
 # Errors go to stdout in abbreviated form
