Tweaks to logging
Not sure if these are necessary or not...

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -37,7 +37,7 @@ log4j.appender.tofile.file=initial.log
 log4j.appender.tofile.threshold=${logging.level}
 log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.tofile.layout.ConversionPattern=\
-	%d{HH:mm:ss} %-5p %C{1}:%L - %m%n
+	%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # Special logger that handles gatherer thread contexts
 log4j.appender.parallog=org.apache.log4j.FileAppender
@@ -46,7 +46,7 @@ log4j.appender.parallog.file=initial.log
 log4j.appender.parallog.threshold=${logging.level}
 log4j.appender.parallog.layout=org.apache.log4j.PatternLayout
 log4j.appender.parallog.layout.ConversionPattern=\
-    %d{HH:mm:ss.SSS} %p %C{1}:%L %X{boardRoot} %m%n
+    %d{HH:mm:ss.SSS} %p %c{1}:%L %X{boardRoot} %m%n
 
 # Errors go to stdout in abbreviated form
 log4j.appender.con=org.apache.log4j.ConsoleAppender
