--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -24,6 +24,9 @@ log4j.additivity.uk.ac.manchester.spinnaker.front_end.download.RecordingRegionDa
 log4j.logger.uk.ac.manchester.spinnaker.front_end.dse.FastExecuteDataSpecification=\
 	DEBUG, parallog, con
 log4j.additivity.uk.ac.manchester.spinnaker.front_end.dse.FastExecuteDataSpecification=false
+log4j.logger.uk.ac.manchester.spinnaker.front_end.dse.HostExecuteDataSpecification=\
+	DEBUG, parallog, con
+log4j.additivity.uk.ac.manchester.spinnaker.front_end.dse.HostExecuteDataSpecification=false
 # See https://stackoverflow.com/q/19788839/301832 for how this configuration
 # works. The tail of the property name must match the full class name.
 log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=\
@@ -37,7 +40,7 @@ log4j.appender.tofile.file=initial.log
 log4j.appender.tofile.threshold=${logging.level}
 log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.tofile.layout.ConversionPattern=\
-	%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
+	%d{HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
 
 # Special logger that handles gatherer thread contexts
 log4j.appender.parallog=org.apache.log4j.FileAppender
@@ -46,7 +49,7 @@ log4j.appender.parallog.file=initial.log
 log4j.appender.parallog.threshold=${logging.level}
 log4j.appender.parallog.layout=org.apache.log4j.PatternLayout
 log4j.appender.parallog.layout.ConversionPattern=\
-    %d{HH:mm:ss.SSS} %p %c{1}:%L %X{boardRoot} %m%n
+    %d{HH:mm:ss.SSS} %-5p %c{1}:%L %X{boardRoot} %m%n
 
 # Errors go to stdout in abbreviated form
 log4j.appender.con=org.apache.log4j.ConsoleAppender
