Turn the speed up now that the gatherer appears to work
Also shuffle the order of writing to group SCP and SDP writes together,
and tweak the logging to be less horrible in debug mode.

--- a/SpiNNaker-front-end/src/main/resources/log4j.properties
+++ b/SpiNNaker-front-end/src/main/resources/log4j.properties
@@ -29,9 +29,8 @@ log4j.logger.uk.ac.manchester.spinnaker.front_end.dse.HostExecuteDataSpecificati
 log4j.additivity.uk.ac.manchester.spinnaker.front_end.dse.HostExecuteDataSpecification=false
 # See https://stackoverflow.com/q/19788839/301832 for how this configuration
 # works. The tail of the property name must match the full class name.
-log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=\
-	INFO, tofile
-log4j.additivity.uk.ac.manchester.spinnaker.connections.UDPConnection=false
+log4j.logger.uk.ac.manchester.spinnaker.connections.UDPConnection=INFO
+log4j.logger.uk.ac.manchester.spinnaker.data_spec.Executor=INFO
 
 # Direct log messages to file
 log4j.appender.tofile=org.apache.log4j.FileAppender
@@ -42,7 +41,7 @@ log4j.appender.tofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.tofile.layout.ConversionPattern=\
 	%d{HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
 
-# Special logger that handles gatherer thread contexts
+# Special logger that handles board-specific thread contexts
 log4j.appender.parallog=org.apache.log4j.FileAppender
 log4j.appender.parallog.append=true
 log4j.appender.parallog.file=initial.log
