--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>diffutils</artifactId>
 				<version>1.3.0</version>
 			</dependency>
+			<dependency>
+				<groupId>net.jcip</groupId>
+				<artifactId>jcip-annotations</artifactId>
+				<version>1.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
