--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<spinnaker.version>5.1.1-SNAPSHOT</spinnaker.version>
 		<slf4j.version>1.7.25</slf4j.version>
+		<log4j.version>2.13.0</log4j.version>
 		<junit.version>5.2.0</junit.version>
 		<checkstyle.version>8.18</checkstyle.version>
   	</properties>
@@ -87,9 +88,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
@@ -138,9 +139,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<version>3.25.2</version>
 			</dependency>
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.17</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
