OpenJDK 8 doesn't work in Focal
https://travis-ci.community/t/expected-feature-release-number-in-range-of-9-to-12-but-got-8-installing-oraclejdk8/1345
https://travis-ci.community/t/java-jdk-on-travis-ci/1380

My workaround is to use different distributions for different versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: java
 os: linux
-dist: focal
-jdk:
-  - openjdk11
-  - openjdk8
+jobs:
+  include:
+    - dist: focal
+      jdk: openjdk11
+    - dist: xenial
+      jdk: openjdk8
 cache:
   directories:
     - $HOME/.m2
